--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,11 @@
 <body>
 
   <!-- Bootstrap Nav Bar -->
-  <nav id="main-navbar" class="navbar navbar-default">
-    <div id="main_navbar_container" class="container-fluid">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
       <div class="navbar-header">
         <ul class="nav navbar-nav navbar-left">
-           <li><a id="brand_name" class="navbar-brand" href="/">Camelia Web</a></li>
+           <li><a class="navbar-brand" href="/">Camelia Web</a></li>
         </ul>
       </div>
       <ul class="nav navbar-nav navbar-right">
@@ -34,32 +34,32 @@
   <!-- Container for the chat / keep everything in one column with offset-->
   <div class="container-fluid">
 
-    <div class="col-xs-offset-2 col-xs-8 column">
+    <div class="col-xs-offset-2 col-xs-8">
       <h4>Fill in your profile information</h4>
 
-    <form>
-      <div class="form-group">
-        <label for="inputUsername">Username</label>
-        <input type="text" class="form-control" id="inputUsername" placeholder="Username">
-      </div>      <div class="form-group">
-        <label for="inputEmail">Email address</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-      </div>
-      <div class="form-group">
-        <label for="inputPassword">Password</label>
-        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <label for="inputFile">Upload profile picture (optional)</label>
-        <input type="file" id="inputFile">
-      </div>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> I agree with those horrendous terms and conditions
-        </label>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+      <form>
+        <div class="form-group">
+          <label for="inputUsername">Username</label>
+          <input type="text" class="form-control" id="inputUsername" placeholder="Username">
+        </div>      <div class="form-group">
+          <label for="inputEmail">Email address</label>
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label for="inputPassword">Password</label>
+          <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+        </div>
+        <div class="form-group">
+          <label for="inputFile">Upload profile picture (optional)</label>
+          <input type="file" id="inputFile">
+        </div>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox"> I agree with those horrendous terms and conditions
+          </label>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
 
       <!-- use EJS to display error message -->
     </div>
